crates/compiler/src/tests/e2e/good/0481_struct_wrapper_generic/main.gom
struct Wrapper[T] {
    inner: T,
}

fn wrap[T](x: T) -> Wrapper[T] {
    Wrapper { inner: x }
}

fn unwrap[T](w: Wrapper[T]) -> T {
    w.inner
}

fn main() {
    let w = wrap(wrap(wrap(42)));
    let result = unwrap(unwrap(unwrap(w)));
    println(result.to_string());
}
