crates/compiler/src/tests/e2e/bad/0568_recursive_struct_via_generic_wrapper/main.gom
struct Box[T] {
    inner: T,
}

struct Loop {
    cell: Box[Loop],
}

fn main() -> unit {
    ()
}
